RESOLVED FIXED128474
Baseline JIT uses the wrong version of checkMarkWord in emitWriteBarrier
https://bugs.webkit.org/show_bug.cgi?id=128474
Summary Baseline JIT uses the wrong version of checkMarkWord in emitWriteBarrier
Mark Hahnenberg
Reported 2014-02-08 15:04:14 PST
Patch coming.
Attachments
Patch (1.78 KB, patch)
2014-02-08 15:19 PST, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-02-08 15:19:55 PST
Michael Saboff
Comment 2 2014-02-08 17:09:54 PST
Comment on attachment 223588 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-02-08 17:38:25 PST
Comment on attachment 223588 [details] Patch Clearing flags on attachment: 223588 Committed r163733: <http://trac.webkit.org/changeset/163733>
WebKit Commit Bot
Comment 4 2014-02-08 17:38:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.