Baseline JIT uses the wrong version of checkMarkWord in emitWriteBarrier https://bugs.webkit.org/show_bug.cgi?id=128474

Reviewed by Michael Saboff.

* jit/JITPropertyAccess.cpp:
(JSC::JIT::emitWriteBarrier):


Canonical link: https://commits.webkit.org/146501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163733 268f45cc-cd09-0410-ab3c-d52691b4dbfc